--- a/packages/cores/designsystem/build.yaml
+++ b/packages/cores/designsystem/build.yaml
@@ -1,13 +1,13 @@
 targets:
   $default:
     builders:
-      freezed:
-        # https://github.com/dart-lang/build/blob/master/docs/faq.md#how-do-i-avoid-running-builders-on-unnecessary-inputs
-        generate_for:
-          include:
-            - lib/{entity,**/entity}/**.dart
-            - lib/{value_object,**/value_object}/**.dart
-            - lib/{model,**/model}/**.dart
+      # freezed:
+      #   # https://github.com/dart-lang/build/blob/master/docs/faq.md#how-do-i-avoid-running-builders-on-unnecessary-inputs
+      #   generate_for:
+      #     include:
+      #       - lib/{entity,**/entity}/**.dart
+      #       - lib/{value_object,**/value_object}/**.dart
+      #       - lib/{model,**/model}/**.dart
       # https://github.com/google/json_serializable.dart/tree/master/json_serializable#build-configuration
       json_serializable:
         generate_for:
