--- a/packages/cores/designsystem/pubspec.yaml
+++ b/packages/cores/designsystem/pubspec.yaml
@@ -36,6 +36,7 @@ dev_dependencies:
   flutter_gen_runner: 
   flutter_test:
     sdk: flutter
+  freezed:
   pedantic_mono:
   riverpod_generator: 
   riverpod_lint: 
