--- a/packages/features/goods/slang.yaml
+++ b/packages/features/goods/slang.yaml
@@ -7,10 +7,7 @@ namespaces: true
 
 # Config
 imports:
-  - "package:features_sample_list/src/domain/value_object/sample_list_sort_key.dart"
-  - "package:features_sample_list/src/presentation/components/sample_list_view_chip.dart"
+  - "package:features_goods/src/domain/value_object/goods_sort_key.dart"
 contexts:
-  SampleListSortKey:
-    generate_enum: false
-  ViewerLayoutType:
+  GoodsSortKey:
     generate_enum: false
