--- a/packages/features/goods/pubspec.yaml
+++ b/packages/features/goods/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   flutter: ^3.24.0
 
 dependencies:
+  animations: 
   clock: 
   collection:
   cores_core:
@@ -28,6 +29,7 @@ dependencies:
   hooks_riverpod: 
   intl: 
   json_annotation: any
+  linked_scroll_controller: 
   nested: 
   riverpod_annotation: 
   riverpod_paging_utils:
@@ -47,9 +49,14 @@ dev_dependencies:
   riverpod_lint: any 
   slang_build_runner: 
 
+flutter:
+  uses-material-design: true
+  assets:
+    - assets/image/
+
 # パッケージ内でのみ利用するAssetsは下記の指定が必要
-# flutter_gen:
-#   output: lib/src/gen/assets
-#   assets:
-#     outputs:
-#       package_parameter_enabled: true
+flutter_gen:
+  output: lib/src/gen/assets
+  assets:
+    outputs:
+      package_parameter_enabled: true
